labs/ingress/specs/ingress-aks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    # TODO - replace with your own DNS
    # e.g. if your FQDN is labs-ingress-01.eastus.cloudapp.azure.com
    # then the host will be labs-ingress-01.eastus.cloudapp.azure.com
  - host: labs-ingress-01.eastus.cloudapp.azure.com #[PLACEHOLDER]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-web
            port: 
              name: http
